src/App.css
/* register style */

:root {
  --bg: #f5f5f5;
  --text: #000;
  --navbg: #fff;
  --headerBg: #fff;
}
[data-theme="dark"] {
  --bg: #22272b;
  --text: #fff;
  --navbg: #161a1d;
  --headerBg: #1d2125;
}

.nav-theme {
  background-color: var(--navbg) !important;
  transition: 0.3s ease-in;
}
.text-theme {
  color: var(--text) !important;
  transition: 0.3s ease-in;
}
.bg-theme {
  background-color: var(--bg) !important;
  transition: 0.3s ease-in;
}
.head-bg {
  background-color: var(--headerBg) !important;
  transition: 0.3s ease-in;
}
.bg-reg {
  background-image: url("/src/assets/images/bg-register.svg");
}
.bg-login {
  background-image: url("/src/assets/images/bg-login.svg");
}
.bg-forget {
  background-image: url("/src/assets/images/bg-forget.svg");
}
.bg-change {
  background-image: url("/src/assets/images/bg-change.svg");
}
.bg-reset {
  background-image: url("/src/assets/images/bg-reset.svg");
}
.bg-verify {
  background-image: url("/src/assets/images/bg-verify.svg");
}

.form {
  background-color: rgba(49, 89, 81, 0.9);
}
.bg-main {
  background: #ef9b28 !important;
}
.text-main {
  color: #ef9b28 !important;
}
.container-auth-form {
  width: 90%;
  margin: 0 auto;
}
.form-title h3 {
  font-family: Inter;
  font-size: 32px;
  font-weight: 700;
  line-height: 46px;
  letter-spacing: -0.4000000059604645px;
  text-align: left;
  position: relative;
}
.form-title p {
  position: absolute;
  bottom: 27%;
  font-family: Inter;
  font-size: 20px;
  font-weight: 500;
  line-height: 46px;
  letter-spacing: -0.4000000059604645px;
  text-align: left;
  color: #fff;
}
.form-title h3::first-letter {
  border-bottom: #ef9b28 solid 5px;
}
.input-container {
  position: relative;
  margin: 35px 0;
}
.input-field {
  font-family: Inter;
  font-size: 16px;
  font-weight: 400;
  line-height: 22px;
  letter-spacing: 0.01em;
  display: block;
  width: 100%;
  padding: 10px;
  border: none;
  border-bottom: 1px solid #ccc;
  outline: none;
  background-color: transparent;
  color: #fff;
}
.input-field::placeholder {
  color: #ccc;
}
.input-label {
  position: absolute;
  top: 0;
  left: 0;
  font-size: 16px;
  color: rgba(204, 204, 204, 0);
  pointer-events: none;
  transition: all 0.3s ease;
}
.input-highlight {
  position: absolute;
  bottom: 0;
  left: 0;
  height: 2px;
  width: 0;
  background-color: #ef9b28;
  transition: all 0.3s ease;
}

.input-field:focus + .input-label,
.input-field:not(:placeholder-shown) + .input-label {
  font-family: Inter;
  font-weight: 400;
  line-height: 22px;
  letter-spacing: 0.01em;
  top: -20px;
  font-size: 16px;
  color: #ef9b28;
}

.input-field:focus + .input-label + .input-highlight {
  width: 100%;
}

/* main btn */
.main-btn {
  background-color: #ef9b28;
  padding: 10px 80px;
  color: #fff;
  text-transform: uppercase;
  font-size: 18px;
  font-weight: 500;
  letter-spacing: 2px;
  cursor: pointer;
  border-radius: 10px;
  border: 3px solid #ef9b28;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
  transition: 0.4s;
}

.main-btn span:last-child {
  display: none;
}

.main-btn:hover {
  transition: 0.4s;
  border: 3px solid #ef9b28;
  background-color: #fff;
  color: #ef9b28;
}

.main-btn:active {
  background-color: #ef9b28;
}

/* btn loading */
.loader {
  font-size: 18px;
  font-weight: 500;
}

.loader span {
  display: inline-flex;
}
.loader span:nth-child(2) {
  letter-spacing: -1em;
  overflow: hidden;
  animation: reveal 700ms cubic-bezier(0.645, 0.045, 0.355, 1) infinite
    alternate;
}
@keyframes reveal {
  0%,
  100% {
    opacity: 0.5;
    letter-spacing: -1em;
  }
  50% {
    opacity: 1;
    letter-spacing: 0em;
  }
}

.formImage {
  width: 120px;
  height: 120px;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #f1fff01f;
}
.formImage input {
  width: 100%;
  height: 150px;
  position: absolute;
  top: 8%;
  left: 3%;
  cursor: pointer;
  opacity: 0;
}
.formImage span i {
  position: absolute;
  top: 75%;
  right: 3%;
  font-size: 15px;
  color: #fff !important;
  background-color: #ef9b28;
  padding: 7px 8px;
  border-radius: 50%;
  cursor: pointer;
}
.group-input {
  position: relative;
}
.icon {
  position: absolute;
  border: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  color: #ef9b28;
  top: 10%;
  left: 90%;
}
.dash-layout {
  height: 100vh;
  padding-top: 75px;
}
.user-img {
  width: 50px;
  height: 50px;
  overflow: hidden;
  display: flex;
  justify-content: center;
}
.user-data {
  position: relative;
}
.user-data::before {
  position: absolute;
  content: "";
  right: 102%;
  width: 1px;
  height: 80%;
  background: rgb(154, 154, 154, 0.7);
}

@media screen and (max-width: 576px) {
  .navbar-brand {
    margin-left: 40px;
  }
}

.toggle-dark-theme {
  background-color: #0e382f;
  width: 56px;
  height: 56px;
  border-radius: 50%;
  display: grid;
  place-items: center;
  cursor: pointer;
  box-shadow: 0 0 50px 20px rgba(0, 0, 0, 0.1);
  line-height: 1;
}

.input-dark-theme {
  display: none;
}

.icon-dark-theme {
  grid-column: 1 / 1;
  grid-row: 1 / 1;
  transition: transform 500ms;
}

.icon--moon {
  transition-delay: 200ms;
  color: #fff;
}

.icon--sun {
  transform: scale(0);
  color: yellow;
}

#switch-dark-theme:checked + .icon--moon {
  transform: rotate(360deg) scale(0);
}

#switch-dark-theme:checked ~ .icon--sun {
  transition-delay: 200ms;
  transform: scale(1) rotate(360deg);
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-text-fill-color: #fff !important;
  -webkit-background-clip: text !important;
  background-clip: text !important;
}

